@@ -9,6 +9,8 @@ chromium-browser (5.0.386.0~svn20100423r45407-0ubuntu1) UNRELEASED; urgency=low
     - update debian/patches/drop_sse2.patch => debian/patches/add_enable_sse2_flag.patch
     - update debian/patches/series
     - update debian/rules
+  * Add app_unittests_strings to INSTALL_EXCLUDE_DIRS
+    - update debian/rules
 
  -- Fabien Tassin <fta@ubuntu.com>  Fri, 23 Apr 2010 04:00:02 +0200
 
